update discussions link to counterpartytalk post

--- a/cip-0013.md
+++ b/cip-0013.md
@@ -2,7 +2,7 @@
   CIP: 13
   Title: Not CIP3 "CIP!3": Asset divisibility auto-switch instead of a "reset"
   Authors: Juan Alemán
-  Discussions-To: https://github.com/CounterpartyXCP/cips/issues/54
+  Discussions-To: https://counterpartytalk.org/t/cip13-cip3-alternative-divisibility-set-by-defining-the-asset-not-by-reserving-the-name/6420
   Status: Draft
   Type: Standards
   Created: 2022-08-29
